--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,50 @@
-/*fonts*/
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url("https://fonts.googleapis.com/css?family=Raleway|Roboto");
+html,
+body,
+ul,
+ol {
+  margin: 0;
+  padding: 0; }
 
+body {
+  background-color: #f4f5f9; }
 
 .blog_header {
-	text-transform: uppercase;
-	max-width: 100%;
-	margin: auto;
-}
+  width: 100%;
+  margin: auto;
+  background-color: #f1404b; }
+  .blog_header #name #subtitle {
+    color: #f1404b;
+    font-family: "Roboto", sans-serif; }
 
+ul li {
+  display: inline;
+  text-decoration: none;
+  font-family: "Raleway", sans-serif; }
 
-.navbar {
-	background-color: #a3a1a1;
-	border: solid 2px black;
-	font-family: 'Roboto', sans-serif;
-	max-width: 100%;
-	opacity: .95;
+.blog_footer {
+  background-color: #252c41;
+  color: #f1404b;
+  font-family: "Roboto", sans-serif; }
 
-}
-
-.navbar li {
-	display: inline;
-	text-decoration: none;
-	align-content: center;
-}
+.blogpost {
+  background-color: #dddfe6;
+  margin: 5em;
+  padding: 2em; }
 
 .wrapper {
-	background-color: #e3dede;
-	color:#333030;
-	max-width:100%;
-	margin: 30px;
-	padding: 10em;
-}
+  background-color: #f4f5f9; }
 
-.blogposts {
-	margin: auto;
-}
+.weekly {
+  font-family: "Roboto", sans-serif;
+  color: #f1404b;
+  font-size: 1.25em;
+  font-weight: strong;
+  text-decoration: underline; }
 
-.weekly{
-	font-weight: 800;
-	text-decoration: underline;
-	font-family: 'Roboto', sans-serif;
-	margin: auto;
-}
-
-footer {
-	font-family: 'Roboto', sans-serif;
-	border: solid 2px black;
-	background-color: #333030;
-	color: #6d819c;
-	text-transform: uppercase;
-	max-width: 100%;
-}
+p .post {
+  background-color: #dddfe6;
+  font-family: "Raleway", sans-serif;
+  font-size: 0.7em;
+  padding: auto;
+  margin: auto; }
