--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,67 +1,75 @@
 @import "_reset.scss";
-@import url('https://fonts.googleapis.com/css?family=Raleway|Roboto');
-
+@import url("https://fonts.googleapis.com/css?family=Raleway|Roboto");
 //colors
 $primary: #f1404b;
 $secondary: #dddfe6;
 $tertiary: #252c41;
 $white: #f4f5f9;
-
 //fonts
-$header-font: 'Roboto',sans-serif;
-$body-font: 'Raleway', sans-serif;
-
-body{
-	background-color: $white;
+$header-font: "Roboto",
+sans-serif;
+$body-font: "Raleway",
+sans-serif;
+body {
+    background-color: $white;
 }
 
-.blog_header{
-	width: 100%;
-	margin: auto;
-	background-color: $primary;
-		#name{
-			#subtitle{
-				color: $primary;
-				font-family: $header-font;
-		}
-	}
+.wrapper {
+    background-color: $tertiary;
 }
 
-ul{
-	li{
-		display: inline;
-		text-decoration: none;
-		font-family: $body-font;
-	}
-}
- .blog_footer {
-        background-color: $tertiary;
-        color: $primary;
-        font-family: $header-font;
-   }
-
-.blogpost{
-	background-color: $secondary;
-	margin: 5em;
-	padding: 2em;
+.blog_header {
+    width: 100%;
+    margin: auto;
+    background-color: $primary;
 }
 
-.wrapper{
-	background-color: $white;
+#name {
+    color: $primary;
+    font-family: $header-font;
 }
 
-.weekly{
-	font-family: $header-font;
-	color: $primary;
-	font-size: 1.25em;
-	font-weight: strong;
-	text-decoration: underline;
+ul {
+    li {
+        display: inline;
+        text-decoration: none;
+        font-family: $body-font;
+    }
 }
 
-p .post{
-	background-color: $secondary;
-	font-family: $body-font;
-	font-size: 0.7em;
-	padding: auto;
-	margin: auto;
+.blog_footer {
+    background-color: $tertiary;
+    color: $primary;
+    font-family: $header-font;
+}
+
+.blogpost {
+    background-color: $secondary;
+    margin: 5em;
+    padding: 2em;
+    border: 3px solid $tertiary;
+}
+
+.wrapper {
+    background-color: $white;
+}
+
+.weekly {
+    font-family: $header-font;
+    color: $primary;
+    font-size: 1.25em;
+    font-weight: strong;
+    text-decoration: underline;
+}
+
+p .post {
+    background-color: $secondary;
+    font-family: $body-font;
+    font-size: 0.7em;
+    padding: auto;
+    margin: auto;
+}
+
+.navbar a {
+    color: $primary;
 }
