--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,7 +20,8 @@ body {
 }
 
 .wrapper {
-    background-color: $tertiary;
+    background-image: url("../img/background.JPG");
+    height: 100%;
 }
 
 .blog_header {
