--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,10 +19,10 @@ body {
     background-color: $white;
 }
 
-.wrapper {
-    background-image: url("../img/background.JPG");
-    height: 100%;
-}
+// .wrapper {
+//     background-image: url("../img/background.JPG");
+//     height: 100%;
+// }
 
 .blog_header {
     width: 100%;
